- Ресурсы-категории товаров больше не обязаны быть контейнерами (теперь не важно значение isfolder).
- Добавлена цена за единицу веса в методах доставки. Старая цена теперь дополнительная. Цена доставки вычисляется по формуле (weight * price) + add_price
- Добавлен показ стоимости и веса заказа в менеджере.
- Изменения товаров в заказе теперь логируются и выводятся в истории заказа.
-----
- Added invoke events to launch the plugins when you changing products in the component. mSearch will now index goods on changing.
- Added a more options for resources in the editing window of the goods (deleted, richtext,cacheable, searchable and clearcache)
- The goods grid now displays status of products, as in resources tree (deleted item is red color, unpublished - gray, etc.)
- Fixed bug in manager when you save empty payment method and not empty delivery method.
- Resources-categories of goods are no longer required to be containers (now isfolder is no matter).
- Added the price per unit of weight in the methods of delivery. Old price is now additional. Shipping is calculated by the formula (weight * price) + add_price
- Added displaying weight and sum of order in the manager.
- Changing goods in order are now logged and showing in orders history.

1.5.1 rc (24.04.2012)
=============
- [#35] Модифицирован браузер MODx для возможности выбора директорий. miniShop правильно понимает источники файлов.
- [#36] Добавлена возможность сохранения товара в корень.
- [#37] Размерность параметра вес увеличена до 3х знаков после запятой.
-----
- [#35] Modified MODx browser to be able to select directories. miniShop understands the files source.
- [#36] Added the ability to save products in the root.
- [#37] The dimension of the parameter weight increased to 3 decimal places.

1.5.0 beta (22.04.2012)
=============
- Добавлено создание галереи товара.
- Новый сниппет msGetGallery для вывода изображений товара (поддерживает getPage).